fix(chatbot): fix spacing in pnr
ref:MANAGER-9267

--- a/packages/manager/apps/hub/src/index.scss
+++ b/packages/manager/apps/hub/src/index.scss
@@ -51,9 +51,10 @@
   position: absolute;
 }
 
-/* fix chatbot display in container as long as it is in an iframe */
-ovh-chatbot .chatbot-floating-button,
-ovh-chatbot .chatbot-main,
-ovh-chatbot .chatbot-reduced {
-  right: 20rem;
+.sidebar-open {
+  .chatbot-floating-button,
+  .chatbot-main,
+  .chatbot-reduced {
+    right: 20rem !important;
+  }
 }
